Add wallet and initital layout styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,5 +18,5 @@ main {
 }
 
 body {
-  background: $bgColor url(assets/images/bg.svg);
+  background: #fff center/cover url(assets/images/bg.png) no-repeat;
 }
