--- a/src/components/layout/footer/Footer.module.scss
+++ b/src/components/layout/footer/Footer.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  padding: 35px 0;
-  border-top: 1px solid $lineColor;
+  padding: 20px 0;
 }
