--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,9 @@
 
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 30px 0 60px;
   position: relative; // for loaders
 }
