Add node switch

--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,6 +1,14 @@
+@use 'utils' as *;
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
+}
+
+.config {
+  @include gap(24px, right);
+  display: flex;
+  align-items: center;
 }
