--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -7,8 +7,19 @@
   padding: 20px 0;
 }
 
-.config {
-  @include gap(24px, right);
+.wrapper {
+  display: flex;
+}
+
+.addresses {
   display: flex;
   align-items: center;
+  margin-right: 20px;
+}
+
+.separator {
+  width: 1px;
+  height: 100%;
+  margin: 0 20px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1' height='46' fill='none'%3E%3Cpath stroke='url(%23a)' stroke-dasharray='2 2' d='M.5.5v45'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.333' x2='0' y1='0' y2='46.5' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-opacity='0'/%3E%3Cstop offset='.474'/%3E%3Cstop offset='1' stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
 }
