Add NFTs slider

--- a/src/components/layout/footer/Footer.module.scss
+++ b/src/components/layout/footer/Footer.module.scss
@@ -1,6 +1,6 @@
 @use '@gear-js/ui/variables' as *;
 
-.footer {
+.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
