Fix NFT background width

--- a/src/features/nfts/components/nfts/NFTs.module.scss
+++ b/src/features/nfts/components/nfts/NFTs.module.scss
@@ -15,7 +15,7 @@
 
 .nft {
   padding: 30px;
-  background: url(../../assets/bg.svg) no-repeat;
+  background: url(../../assets/bg.svg) center/100% 100% no-repeat;
 }
 
 .collection {
