--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -158,4 +158,9 @@
   background-color: transparent;
   border: 2px solid #000000;
   border-radius: 2px;
+  transition: all 0.3s;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
