--- a/src/features/node-switch/components/node-switch/NodeSwitch.module.scss
+++ b/src/features/node-switch/components/node-switch/NodeSwitch.module.scss
@@ -9,6 +9,11 @@
   line-height: 26px;
   letter-spacing: 0.03em;
   background-color: transparent;
+  transition: all 0.3s;
+
+  &:hover {
+    opacity: 0.6;
+  }
 
   &::before {
     @include circle(7px);
