--- a/src/features/nfts/components/nfts/NFTs.module.scss
+++ b/src/features/nfts/components/nfts/NFTs.module.scss
@@ -86,6 +86,11 @@
   white-space: nowrap;
   background-color: #09ffc6;
   border-radius: 2px;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #29c6a1;
+  }
 }
 
 .embla {
@@ -112,6 +117,11 @@
   @include circle(40px);
   border: 1px solid #000000;
   background-color: transparent;
+  transition: all 0.3s;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 .rightButton {
