--- a/src/features/node-switch/components/switch-modal/SwitchModal.module.scss
+++ b/src/features/node-switch/components/switch-modal/SwitchModal.module.scss
@@ -27,3 +27,41 @@
     width: 100%;
   }
 }
+
+.switchButton,
+.addButton {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+  border-radius: 2px;
+  transition: all 0.3s;
+}
+
+.switchButton {
+  @include gap(12px, right);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 32px;
+  background-color: #35ffd0;
+  color: inherit;
+
+  &:disabled {
+    opacity: 0.5;
+  }
+
+  &:hover {
+    background-color: #29c6a1;
+  }
+}
+
+.addButton {
+  @include square(50px);
+  flex-shrink: 0;
+  background-color: #000;
+
+  &:hover {
+    background-color: #404040;
+  }
+}
