--- a/src/features/welcome/Welcome.module.scss
+++ b/src/features/welcome/Welcome.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
 
   &:not(:last-child) {
     margin-bottom: 50px;
@@ -28,4 +29,19 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 140%;
+}
+
+.button {
+  padding: 16px 32px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+  background-color: #35ffd0;
+  border-radius: 2px;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #29c6a1;
+  }
 }
