Fix modal scroll and background images

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -22,6 +22,10 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
 
+  &.modal-open {
+    overflow-y: hidden;
+  }
+
   &.setup {
     background-image: url(/assets/images/bg.png);
   }
