Add owner NFTs button

--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -29,6 +29,9 @@
 }
 
 .footer {
+  @include gap(20px, right);
+  display: flex;
+  align-items: center;
   padding: 30px 22px;
   color: #fff;
   background: linear-gradient(183.24deg, rgba(0, 0, 0, 0.2) 32.24%, rgba(14, 211, 163, 0.2) 91.35%), #000000;
@@ -38,6 +41,22 @@
   &Wrapper {
     width: 100%;
     padding: 0 32px;
+  }
+
+  .ownerButton {
+    padding: 12px 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.03em;
+    white-space: nowrap;
+    background-color: #09ffc6;
+    border-radius: 2px;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: #29c6a1;
+    }
   }
 }
 
