Add home page responsive layout

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,5 @@
 @use '@gear-js/ui/resets';
+@use 'utils' as *;
 
 @font-face {
   font-family: 'Anuphan', sans-serif;
@@ -46,11 +47,20 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
 
+  @include lg {
+    background-size: 650px;
+    background-position: center top 10%;
+  }
+
   &.modal-open {
     overflow-y: hidden;
   }
 
   &.welcome {
     background-image: url(/assets/images/bg.png);
+
+    @include lg {
+      background-image: url(/assets/images/mobile-bg.png);
+    }
   }
 }
