--- a/src/components/layout/footer/Footer.module.scss
+++ b/src/components/layout/footer/Footer.module.scss
@@ -1,8 +1,18 @@
 @use '@gear-js/ui/variables' as *;
+@use 'utils' as *;
 
 .container {
-  padding: 20px 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
+
+  @include lg {
+    @include gap(16px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
 }
