--- a/src/features/nfts/components/search/Search.module.scss
+++ b/src/features/nfts/components/search/Search.module.scss
@@ -11,8 +11,16 @@
   border: 1px solid #0000003b;
   border-radius: 4px;
 
+  @include lg {
+    max-width: 100%;
+  }
+
   input {
     width: 100%;
     outline: none;
+  }
+
+  svg {
+    flex-shrink: 0;
   }
 }
