--- a/src/features/welcome/Welcome.module.scss
+++ b/src/features/welcome/Welcome.module.scss
@@ -1,3 +1,5 @@
+@use 'utils' as *;
+
 .welcome {
   max-width: 375px;
   min-height: 75vh;
@@ -5,6 +7,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+
+  @include lg {
+    max-width: 100%;
+    align-items: center;
+    text-align: center;
+  }
 
   &:not(:last-child) {
     margin-bottom: 50px;
@@ -16,6 +24,11 @@
   font-weight: 500;
   font-size: 72px;
   line-height: 120%;
+
+  @include lg {
+    margin-bottom: 16px;
+    font-size: 48px;
+  }
 
   .nftText {
     background: linear-gradient(90deg, #000000 33.39%, #00ffc4 77.42%);
@@ -29,6 +42,11 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 140%;
+
+  @include lg {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
 }
 
 .button {
