--- a/src/components/layout/container/Container.module.scss
+++ b/src/components/layout/container/Container.module.scss
@@ -2,6 +2,7 @@
   max-width: 1200px;
   padding-left: 16px;
   padding-right: 16px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   box-sizing: content-box;
 }
