--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -1,16 +1,24 @@
 @use 'utils' as *;
 
 .container {
-  @include gap(60px, right);
   display: flex;
+  gap: 60px;
   margin-bottom: 100px;
 
+  @include lg {
+    flex-direction: column;
+    align-items: center;
+  }
+
   > div {
-    max-width: 50%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+
+    @include lg {
+      width: 100%;
+    }
   }
 }
 
@@ -41,6 +49,10 @@
   &Wrapper {
     width: 100%;
     padding: 0 32px;
+
+    @include lg {
+      padding: 0;
+    }
   }
 
   .ownerButton {
@@ -83,6 +95,10 @@
   font-weight: 500;
   font-size: 64px;
   line-height: 120%;
+
+  @include lg {
+    font-size: 48px;
+  }
 }
 
 .collection {
