--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -1,13 +1,22 @@
 @use 'utils' as *;
 
 .container {
-  @include gap(60px, right);
   display: flex;
+  gap: 60px;
   margin-bottom: 100px;
+
+  @include lg {
+    flex-direction: column;
+    align-items: center;
+  }
 
   > div {
     flex: 1;
-    max-width: 50%;
+    width: 50%;
+
+    @include lg {
+      width: 100%;
+    }
   }
 }
 
@@ -37,6 +46,10 @@
   &Wrapper {
     width: 100%;
     padding: 0 32px;
+
+    @include lg {
+      padding: 0;
+    }
   }
 
   .ownerButton {
@@ -79,6 +92,10 @@
   font-weight: 500;
   font-size: 64px;
   line-height: 120%;
+
+  @include lg {
+    font-size: 48px;
+  }
 }
 
 .collection {
