Fix back button and NFT border on small height images

--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -6,17 +6,13 @@
   margin-bottom: 100px;
 
   > div {
+    flex: 1;
     max-width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
   }
 }
 
 .imageWrapper {
   width: 100%;
-  flex: 1;
   margin-bottom: 25px;
   padding: 32px;
   background: url(../../assets/bg-secondary.svg) center/ 100% 100% no-repeat;
@@ -161,6 +157,7 @@
   border: 2px solid #000000;
   border-radius: 2px;
   transition: all 0.3s;
+  align-self: flex-start;
 
   &:hover {
     opacity: 0.5;
