Add search and responsivness (#4)
* Remove owner nfts filter

* Add search

* Add owner NFTs button

* Add home page responsive layout

* Fix list page redirect

* Add list responsivness

* Add NFT responsivness

* Fix search display on loading

* Fix open modal scroll block on resize

* Add nfts placeholder responsivness

--- a/src/features/contract-address/components/contract-address/ContractAddress.module.scss
+++ b/src/features/contract-address/components/contract-address/ContractAddress.module.scss
@@ -3,6 +3,8 @@
 .button {
   @include gap(10px, right);
   background-color: transparent;
+  width: 100%;
+  max-width: 180px;
   display: flex;
   align-items: center;
   font-weight: 700;
@@ -11,12 +13,19 @@
   letter-spacing: 0.03em;
   transition: all 0.3s;
 
+  @include lg {
+    max-width: 100%;
+  }
+
   &:hover {
     opacity: 0.6;
   }
 
   span {
     @include textOverflow;
-    max-width: 160px;
+  }
+
+  svg {
+    flex-shrink: 0;
   }
 }
