Revert "Add search and responsivness (#4)"
This reverts commit 9e2b5748f860db19a12d2955e605a71ce5e6a7a1.

--- a/src/components/layout/footer/Footer.module.scss
+++ b/src/components/layout/footer/Footer.module.scss
@@ -1,18 +1,8 @@
 @use '@gear-js/ui/variables' as *;
-@use 'utils' as *;
 
 .container {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 0;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-
-  @include lg {
-    @include gap(16px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-  }
 }
