--- a/src/components/layout/container/Container.module.scss
+++ b/src/components/layout/container/Container.module.scss
@@ -2,7 +2,6 @@
   max-width: 1200px;
   padding-left: 16px;
   padding-right: 16px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   box-sizing: content-box;
 }
