--- a/src/features/nfts/components/nfts/NFTs.module.scss
+++ b/src/features/nfts/components/nfts/NFTs.module.scss
@@ -150,3 +150,19 @@
     line-height: 140%;
   }
 }
+
+.button {
+  margin-top: 16px;
+  padding: 16px 32px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+  background-color: #35ffd0;
+  border-radius: 2px;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #29c6a1;
+  }
+}
