--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,8 @@
 }
 
 main {
+  position: relative; // for loaders
+  display: flex;
   flex: 1;
   padding: 50px 0 70px;
-  position: relative; // for loaders
 }
