upd inner and welcome pages

--- a/src/components/layout/container/Container.module.scss
+++ b/src/components/layout/container/Container.module.scss
@@ -1,8 +1,8 @@
 .container {
+  width: 100%;
   max-width: 1200px;
   padding-left: 16px;
   padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
-  box-sizing: content-box;
 }
