--- a/src/components/ui/button/buttons.module.scss
+++ b/src/components/ui/button/buttons.module.scss
@@ -5,7 +5,6 @@
   --btn-text-color: #000;
 
   font-weight: 700;
-  letter-spacing: 0.54px;
   transition-property: background-color, border-color, color;
   transition-duration: 300ms;
   transition-timing-function: ease;
@@ -43,6 +42,14 @@ a.base[aria-disabled="true"] {
   padding: 10px 32px;
   font-size: 18px;
   line-height: 26px;
+  letter-spacing: 0.54px;
+}
+
+.sm {
+  padding: 8px 16px;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.48px;
 }
 
 .primary {
@@ -65,6 +72,7 @@ a.base[aria-disabled="true"] {
     right: -2px;
     bottom: -2px;
     z-index: -1;
+    border-radius: 2px;
   }
 
   &::before {
