--- a/src/features/welcome/Welcome.module.scss
+++ b/src/features/welcome/Welcome.module.scss
@@ -3,15 +3,23 @@
 .container {
   display: flex;
   flex: 1;
-  align-content: center;
+  //width: 100%;
+  //justify-content: center;
+  //align-content: center;
+  //min-height: 75vh;
+  @include lg {
+    padding-top: Min(30vh,200px);
+
+  }
 }
 
 .welcome {
-  max-width: 375px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
+  max-width: 375px;
 
   @include lg {
     max-width: 100%;
@@ -26,45 +34,20 @@
 
 .heading {
   margin-bottom: 24px;
-  font-weight: 500;
-  font-size: 72px;
-  line-height: 120%;
 
   @include lg {
     margin-bottom: 16px;
     font-size: 48px;
-  }
-
-  .nftText {
-    background: linear-gradient(90deg, #000000 33.39%, #00ffc4 77.42%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    line-height: 58px;
   }
 }
 
 .text {
   margin-bottom: 48px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 140%;
 
   @include lg {
+    max-width: 335px;
+    margin: 0 auto 24px;
     font-size: 16px;
-    margin-bottom: 24px;
-  }
-}
-
-.button {
-  padding: 16px 32px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 18px;
-  letter-spacing: 0.03em;
-  background-color: #35ffd0;
-  border-radius: 2px;
-  transition: all 0.3s;
-
-  &:hover {
-    background-color: #29c6a1;
   }
 }
