--- a/src/components/ui/alert/alert.module.scss
+++ b/src/components/ui/alert/alert.module.scss
@@ -1,10 +1,17 @@
+@use 'utils' as *;
+
 .root {
   position: fixed;
   right: 20px;
   bottom: 20px;
   z-index: 20;
-  width: 100%;
+  width: calc(100vw - 32px);
   max-width: 480px;
+
+  @include lg {
+    right: 16px;
+    bottom: calc(20px + env(safe-area-inset-bottom));
+  }
 }
 
 .alert {
