--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -30,6 +30,24 @@
   }
 }
 
+.desktopWallet {
+  font-size: 16px;
+  padding-right: 24px;
+  padding-left: 24px;
+  text-transform: capitalize;
+
+  span {
+    @include textOverflow;
+    display: block;
+    max-width: 15ch;
+    white-space: nowrap;
+  }
+
+  svg {
+    cursor: pointer;
+  }
+}
+
 .mobileMenuWrapper {
   display: none;
   position: relative;
