--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -186,27 +186,14 @@
   @include gap(24px, right);
   display: flex;
   align-items: center;
-}
 
-.backButton {
-  @include gap(11px, right);
-  display: flex;
-  align-items: center;
-  padding: 17px 24px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 0.03em;
-  background-color: transparent;
-  border: 2px solid #000000;
-  border-radius: 2px;
-  transition: all 0.3s;
-  align-self: flex-start;
-
-  &:hover {
-    opacity: 0.5;
+  .backButton {
+    padding-right: 24px;
+    padding-left: 24px;
+    font-size: 16px;
   }
 }
+
 
 .transferButton {
   @include gap(11px, right);
