--- a/src/features/nfts/components/nft/NFT.module.scss
+++ b/src/features/nfts/components/nft/NFT.module.scss
@@ -187,7 +187,7 @@
   display: flex;
   align-items: center;
 
-  .backButton {
+  button {
     padding-right: 24px;
     padding-left: 24px;
     font-size: 16px;
