--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr minmax(0, auto);
+  grid-template-columns: min-content minmax(0, auto);
   align-items: center;
   gap: 64px;
   padding-bottom: 20px;
@@ -21,6 +21,7 @@
 .desktopMenu {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   gap: 20px;
 }
 
@@ -30,30 +31,36 @@
   }
 }
 
-.desktopWallet > button {
-  font-size: 16px;
-  padding-right: 24px;
-  padding-left: 24px;
-  text-transform: capitalize;
+.desktopWallet {
+  display: flex;
+  gap: 40px;
 
-  span {
-    @include textOverflow;
-    display: block;
-    max-width: 15ch;
-    white-space: nowrap;
-  }
+  > button {
+    font-size: 16px;
+    padding-right: 24px;
+    padding-left: 24px;
+    text-transform: capitalize;
 
-  svg {
-    cursor: pointer;
+    span {
+      @include textOverflow;
+      display: block;
+      max-width: 15ch;
+      white-space: nowrap;
+    }
+
+    svg {
+      cursor: pointer;
+    }
   }
 }
 
 .mobileMenuWrapper {
-  display: none;
   position: relative;
+  display: none;
 
   @include lg {
-    display: block;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .button {
@@ -109,14 +116,9 @@
   }
 }
 
-.addresses {
-  display: flex;
-  align-items: center;
-
-  .separator {
-    width: 1px;
-    height: 45px;
-    margin: 0 20px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1' height='46' fill='none'%3E%3Cpath stroke='url(%23a)' stroke-dasharray='2 2' d='M.5.5v45'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.333' x2='0' y1='0' y2='46.5' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-opacity='0'/%3E%3Cstop offset='.474'/%3E%3Cstop offset='1' stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
-  }
+.separator {
+  width: 1px;
+  height: 45px;
+  margin: 0 20px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1' height='46' fill='none'%3E%3Cpath stroke='url(%23a)' stroke-dasharray='2 2' d='M.5.5v45'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.333' x2='0' y1='0' y2='46.5' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-opacity='0'/%3E%3Cstop offset='.474'/%3E%3Cstop offset='1' stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
 }
