--- a/src/components/ui/button/buttons.module.scss
+++ b/src/components/ui/button/buttons.module.scss
@@ -26,13 +26,14 @@ a.base[aria-disabled="true"] {
 .btn {
   --btn-bg-color: #64ffdb;
   --btn-border-color: var(--btn-bg-color);
+  --btn-radius: 2px;
 
   @extend .base;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   color: var(--btn-text-color);
-  border-radius: 2px;
+  border-radius: var(--btn-radius);
   border: 2px solid var(--btn-border-color);
   background-color: var(--btn-bg-color);
   @include gap(10px, right);
@@ -72,7 +73,7 @@ a.base[aria-disabled="true"] {
     right: -2px;
     bottom: -2px;
     z-index: -1;
-    border-radius: 2px;
+    border-radius: var(--btn-radius);
   }
 
   &::before {
