--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,6 +1,7 @@
 @use 'utils' as *;
 
 .container {
+  position: relative;
   display: grid;
   grid-template-columns: min-content minmax(0, auto);
   align-items: center;
@@ -55,7 +56,6 @@
 }
 
 .mobileMenuWrapper {
-  position: relative;
   display: none;
 
   @include lg {
@@ -65,20 +65,16 @@
 
   .button {
     --btn-bg-color: transparent;
-    padding: 4px 1px;
-
-    svg {
-      width: 26px;
-      height: 20px;
-    }
+    padding: 0;
+    width: 32px;
+    height: 32px;
   }
 
   .list {
     position: absolute;
-    max-width: 250px;
-    //max-width: calc(100vw - 32px);
-    top: calc(100% + 16px);
-    right: 0;
+    top: calc(80px + 16px);
+    right: 16px;
+    left: 16px;
     padding: 4px;
     background-color: #fff;
     border-radius: 4px;
